[project]
name = "iseebetter"
description = "Custom Node to implement iSeeBetter upscaling method."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-iSeeBetter Requirements", "# Core dependencies (usually already installed with ComfyUI)", "torch>=1.10.0", "torchvision>=0.11.0", "numpy>=1.19.0", "# Optical flow computation", "opencv-python>=4.5.0", "# Optional: For advanced optical flow methods", "# These are not required but can improve quality", "# kornia>=0.6.0", "# Note: The pyflow library used in the original iSeeBetter", "# requires compilation. If you want to use it:", "# 1. Clone: git clone https://github.com/pathak22/pyflow", "# 2. Build: cd pyflow && python setup.py build_ext -i", "# 3. Copy pyflow*.so to this directory"]

[project.urls]
Repository = "https://github.com/llikethat/ComfyUI-iseebetter"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/llikethat/ComfyUI-iseebetter/wiki"
"Bug Tracker" = "https://github.com/llikethat/ComfyUI-iseebetter/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-iseebetter"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

